8180048: Interned string and symbol table leak memory during parallel unlinking

Make appending found dead BasicHashtableEntrys to the free list atomic.

Reviewed-by: ehelin, shade